Doxygen project file added

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 # Built application files
 *.apk
 *.ap_
@@ -13,6 +13,7 @@
 bin/
 gen/
 out/
+doc/
 
 # Gradle files
 .gradle/
@@ -39,9 +40,3 @@ captures/
 
 # Keystore files
 *.jks
-=======
-# Ignorer tous les fichiers dans bin
-/bin/*
-# Ignorer les fichiers generes
-/gen/*
->>>>>>> b4ba9ce6e0ff84a50487ab4d85d51082f97860a7
