--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,16 @@
 			android:label="@string/app_name">          
  		</activity>
  		
+        <activity
+			android:name="com.example.furry_octo_waddle.activities.TestActivity"
+			android:label="@string/app_name">          
+ 		</activity>
+ 		
+        <activity
+			android:name="com.example.furry_octo_waddle.activities.TranslateActivity"
+			android:label="@string/app_name">          
+ 		</activity>
+ 		
     </application>
 
 </manifest>
