--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
     <application
@@ -25,7 +25,11 @@
         
         <activity
 			android:name="com.example.furry_octo_waddle.activities.LearnActivity"
-			android:label="@string/app_name">          
+			android:label="@string/app_name"
+			android:parentActivityName="com.example.furry_octo_waddle.activities.MainActivity" >
+			<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.furry_octo_waddle.activities.MainActivity" />         
  		</activity>
  		
         <activity
