ScrollView in Learn Activity (useful when typing text)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
 			android:name="com.example.furry_octo_waddle.activities.LearnActivity"
 			android:label="@string/app_name"
+			android:windowSoftInputMode="adjustResize"
 			android:parentActivityName="com.example.furry_octo_waddle.activities.MainActivity" >
 			<meta-data
             	android:name="android.support.PARENT_ACTIVITY"
