--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,8 @@
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.TestActivity"
-			android:label="@string/app_name">          
+			android:label="@string/app_name"
+			android:windowSoftInputMode="stateAlwaysVisible">          
  		</activity>
  		
         <activity
