--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,18 +35,35 @@
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.AddActivity"
-			android:label="@string/app_name">          
+			android:label="@string/app_name"
+			android:windowSoftInputMode="adjustResize"
+			android:parentActivityName="com.example.furry_octo_waddle.activities.MainActivity" >
+			<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.furry_octo_waddle.activities.MainActivity" />         
+ 		          
  		</activity>
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.TestActivity"
 			android:label="@string/app_name"
-			android:windowSoftInputMode="stateAlwaysVisible">          
+			android:windowSoftInputMode="stateAlwaysVisible"
+			android:parentActivityName="com.example.furry_octo_waddle.activities.MainActivity" >
+			<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.furry_octo_waddle.activities.MainActivity" />         
+ 		          
  		</activity>
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.TranslateActivity"
-			android:label="@string/app_name">          
+			android:label="@string/app_name" 
+			android:windowSoftInputMode="adjustResize"
+			android:parentActivityName="com.example.furry_octo_waddle.activities.MainActivity" >
+			<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.furry_octo_waddle.activities.MainActivity" />         
+ 		         
  		</activity>
  		
     </application>
