--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
     <application
@@ -41,7 +41,8 @@
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.TranslateActivity"
-			android:label="@string/app_name">          
+			android:label="@string/app_name"
+			android:windowSoftInputMode="adjustResize"> >          
  		</activity>
  		
     </application>
