--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,17 +25,17 @@
         
         <activity
 			android:name="com.example.furry_octo_waddle.activities.LearnActivity"
-			android:label="@string/app_name">          
+			android:label="@string/string_learn">          
  		</activity>
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.AddActivity"
-			android:label="@string/app_name">          
+			android:label="@string/string_add_words">          
  		</activity>
  		
         <activity
 			android:name="com.example.furry_octo_waddle.activities.TestActivity"
-			android:label="@string/app_name"
+			android:label="@string/string_test"
 			android:windowSoftInputMode="stateAlwaysVisible">          
  		</activity>
  		
