Add of the final score at the end of the activity 'Test'

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -77,6 +77,17 @@
  		         
  		</activity>
  		
+        <activity
+			android:name="com.example.furry_octo_waddle.activities.TestResultsActivity"
+			android:label="@string/string_results" 
+			android:windowSoftInputMode="adjustResize"
+			android:parentActivityName="com.example.furry_octo_waddle.activities.MainActivity" >
+			<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.furry_octo_waddle.activities.MainActivity" />         
+ 		         
+ 		</activity>
+ 		
     </application>
 
 </manifest>
